--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,15 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+            <ul class=flashes>
+            {% for message in messages %}
+            <li>{{ message }}</li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
     <div class="container-fluid">
         {% block content %}
         {% endblock %}
